[package]
name = "vader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { verion = "0.24.0", features = ["json", "avro","csv-file", "fmt", "lazy", "parquet", "temporal", "dtype-date"] }
clap = { version = "3.2.20", features = ["derive"]}
anyhow = "1.0.65"