[package]
name = "vader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { verion = "0.24.0", features = ["json", "avro","csv-file", "fmt", "lazy", "parquet", "temporal", "dtype-date", "dtype-struct"] }
clap = { version = "4.0.8", features = ["derive", "cargo"]}
anyhow = "1.0.65"